# actix-todo

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250209_074951_create_todo_table.rs
src/: main.rs
src/entity/: mod.rs  prelude.rs  todo.rs
src/handler/: prelude.rs  todos.rs
src/repository/: mod.rs  prelude.rs  todos.rs
