[package]
name = "actix-todo"
version = "0.1.0"
edition = "2021"
migration = { path = "migration" }

[dependencies]
actix-web = "4.7"
actix-cors = "^0.6"
dotenv = "^0.15"
sea-orm = { version = "^1.1.2", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ] }
async-std = { version = "^1.13", features = ["attributes", "tokio1"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
futures = "^0.3"
env_logger = "^0.11.0"
log = "^0.4.25"
migration = { path = "migration" }

[dependencies.sea-orm-migration]
version = "^1.1.4"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-actix-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",         # `DATABASE_DRIVER` feature
]